# orchestrating-ai-models-to-achieve-a-goal

./: .gitignore  ARCHITECTURE.md  README.md  copy_shared_to_services.py  docker-compose.local.yml  docker-compose.yml  package-lock.json  package.json
.github/workflows/: build-backend.yml  build-chatterbox.yml  build-core-backend.yml  build-describe-image.yml  build-extract-webcontent.yml  build-frontend.yml  build-generate-description.yml  build-mistral.yml  build-qwen.yml
.windsurf/rules/: daisyui.md
backend/: .env.example  README.md  alembic.ini  create_tables.py  dockerfile  env.example  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: add_audio_config_to_products.py  add_describe_image_prompt.py  add_product_fields.py  add_user_settings_fields.py
backend/app/: config.py  database.py  exceptions.py  main.py
backend/app/api/: routes.py
backend/app/config/: voice_models.json
backend/app/describe-image/: router.py  schemas.py  service.py
backend/app/describe_image/: router.py  schemas.py  service.py
backend/app/export/: schemas.py  service.py
backend/app/extract_web_content/: router.py  schemas.py  service.py
backend/app/generate-description/: router.py  schemas.py  service.py
backend/app/generate_description/: router.py  service.py
backend/app/products/: models.py  router.py  schemas.py  service.py
backend/app/services/: router.py  schemas.py
backend/app/settings/: __init__.py  models.py  router.py  schemas.py  service.py
backend/app/shared/: adapter.py  api_adapter.py  minio_client.py  (+2 more)
backend/docs/: directory_structure.md
frontend/: .prettierrc.json  dockerfile  eslint.config.ts  index.html  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/: App.vue  main.ts
services/: README.md
services/chatterbox-text-to-speech/: .env.example  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
services/chatterbox-text-to-speech/app/: __init__.py  check_imports.py  common.py  config.py  handler.py  main.py  minio_client.py  model.py  router.py  rp_handler.py  schemas.py  service.py  shared.py  start.sh
services/describe-image/: .env.example  Dockerfile  Dockerfile.runpod  config.py  main.py  pyproject.toml  requirements.txt  router.py  schemas.py  service.py
services/describe-image/ai_models/: __init__.py  base.py  factory.py  gemini.py  openai.py  qwen.py
services/describe-image/strategies/: __init__.py  base.py  factory.py  gemini_strategy.py  openai_strategy.py  qwen_strategy.py
services/extract-webcontent/: Dockerfile  main.py  requirements.txt  router.py  service.py
services/generate-description/: Dockerfile  config.py  main.py  pyproject.toml  requirements.txt  router.py  schemas.py  service.py
services/generate-description/ai_models/: __init__.py  base.py  factory.py  gemini.py  mistral.py  openai.py
services/generate-description/strategies/: __init__.py  base.py  factory.py  gemini_strategy.py  mistral_strategy.py  openai_strategy.py
services/mistral-generate-description/: .dockerignore  .env.example  README.md  main.py  model.py  pyproject.toml  router.py  schemas.py  service.py
services/qwen-describe-image/: .dockerignore  .env.example  Dockerfile  Dockerfile.prod  Dockerfile.runpod  README.md  docker-compose.prod.yml  docker-compose.runpod.yml  docker-compose.yml  download_model.py  main.py  model.py  pyproject.toml  requirements.txt  router.py  rp_handler.py  s3_sync.py  schemas.py  service.py  startup.sh
services/qwen-describe-image/app/: __init__.py  common.py  config.py  handler.py  main.py  model.py  router.py  rp_handler.py  s3_downloader.py  schemas.py  service.py  shared.py  start.sh
services/qwen-describe-image/prompts/: default.txt
services/qwen-describe-image/src/: config.py  main.py  model.py  service.py  start.sh
services/shared/: common.py  main.py  router.py  rp_handler.py  schemas.py
(+141 files in other folders)
