[tool.poetry]
name = "qwen-describe-image"
version = "0.1.0"
description = "Qwen service for image description and analysis"
authors = ["elias <elias.qlr@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.11"
accelerate = ">=0.25.0"
fastapi = ">=0.104.1"
httpx = "0.24.0"
numpy = "1.26.4"
pillow = ">=10.1.0"
pydantic-settings = ">=2.1.0"
qwen-vl-utils = ">=0.0.8"
requests = ">=2.31.0"
boto3 = ">=1.34.0"
urllib3 = "2.5.0"
uvicorn = {extras = ["standard"], version = ">=0.24.0"}
transformers = ">=4.37.0"
torch = ">=2.1.0"
torchvision = ">=0.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
